Fix 'installed' overlays in highcontrast
They were using no-longer-existing symbolic color names.
Use the official, exported names.

https://bugzilla.gnome.org/show_bug.cgi?id=745922

--- a/src/gtk-style-hc.css
+++ b/src/gtk-style-hc.css
@@ -1,15 +1,15 @@
 .installed-overlay-box {
 	font-size: 80%;
-	background-color: @theme_button_active_bg;
+	background-color: @theme_selected_bg_color;
 	border-radius: 4px;
-	color: @theme_base_color;
+	color: @theme_selected_fg_color;
 }
 
 .popular-installed-overlay-box {
 	font-size: 80%;
-	background-color: @theme_button_active_bg;
+	background-color: @theme_selected_bg_color;
 	border-radius: 0;
-	color: @theme_base_color;
+	color: @theme_selected_fg_color;
 }
 
 @keyframes throbbing {
